--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",  
+  "server": "nodemon server.js",  
+  "client": "npm start --prefix ../frontend",
+  "build": "npm run build --prefix ../frontend",
+  "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -20,6 +26,7 @@
     "nodemailer": "^7.0.10",
     "react-router-dom": "^7.9.5"
   },
+
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
